--- a/public/index.html
+++ b/public/index.html
@@ -7,14 +7,28 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="With over 200+ award-winning digital campaigns, Fulcro is India&#39;s most awarded digital media agency. We help brands build disruptive connections with consumers."
+    />
+    <meta
+      name="keyword"
+      content="Digital Media Agency, Digital Media Company, Digital Media Consulting, Fulcro"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="stylesheet" href="./css/owl.carousel.min.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/simplebar.css">
+    <link rel="stylesheet" href="./css/owl.carousel.min.css">
     <title>React App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <script src="./scripts/owl.carousel.min.js"></script>
+    <script src="./scripts/jquery.js" type="text/javascript"></script>
+    <script src="./scripts/lazyload.js" type="text/javascript"></script>
+    <script src="./scripts/filter.js" type="text/javascript"></script>
+    <script src="./scripts/simplebar.js" type="text/javascript"></script>
+    <script src="./scripts/main.js" type="text/javascript"></script>
   </body>
 </html>
